--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -135,7 +135,7 @@ jobs:
       matrix:
         target: [
           x86_64-unknown-linux-gnu,
-          # x86_64-unknown-linux-musl,
+          x86_64-unknown-linux-musl,
         ]
 
     steps:
