--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -297,12 +297,11 @@ jobs:
         include:
           - target: x86_64-unknown-dragonfly
           - target: x86_64-unknown-openbsd
+          - target: x86_64-unknown-haiku
+
           # Temporarily disable armv7-unknown-linux-uclibceabihf
           # https://github.com/nix-rust/nix/issues/2200
           #- target: armv7-unknown-linux-uclibceabihf
-
-          # https://github.com/nix-rust/nix/issues/2441
-          # - target: x86_64-unknown-haiku
 
           # Disable hurd due to
           # https://github.com/nix-rust/nix/issues/2306
