Fix the build with -Zdirect-minimal-versions
The difference between -Zminimal-versions and -Zdirect-minimal-versions
is subtle.  But the important point is that with the former, a new
release published by one of our dependencies can cause our CI to fail.
With the latter, it cannot.  That's why I think it's better to test with
the latter.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -345,7 +345,7 @@ jobs:
         uses: dtolnay/rust-toolchain@nightly
 
       - name: setup 
-        run: cargo update -Zminimal-versions
+        run: cargo update -Zdirect-minimal-versions
 
       - name: check
         run: cargo check
