--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -30,7 +30,7 @@ test: &TEST
   << : *BUILD
   test_script:
     - . $HOME/.cargo/env || true
-    - $TOOL test --target $TARGET --all-features
+    - $TOOL test --target $TARGET
 
 # Test FreeBSD in a full VM.  Test the i686 target too, in the
 # same VM.  The binary will be built in 32-bit mode, but will execute on a
@@ -59,7 +59,7 @@ task:
     - . $HOME/.cargo/env
     - cargo build --target i686-unknown-freebsd --all-features
     - cargo doc --no-deps --target i686-unknown-freebsd --all-features
-    - cargo test --target i686-unknown-freebsd --all-features
+    - cargo test --target i686-unknown-freebsd
   i386_feature_script:
     - . $HOME/.cargo/env
     - if [ -z "$NOHACK" ]; then cargo hack check --each-feature --target i686-unknown-freebsd; fi
