--- a/.github/actions/test/action.yml
+++ b/.github/actions/test/action.yml
@@ -29,4 +29,4 @@ runs:
 
     - name: test
       shell: bash
-      run: ${{ inputs.SUDO }} $(which ${{ inputs.TOOL }}) test --target ${{ inputs.TARGET }} --all-features
+      run: ${{ inputs.SUDO }} $(which ${{ inputs.TOOL }}) test --target ${{ inputs.TARGET }}
