--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -303,7 +303,8 @@ jobs:
           - target: x86_64-unknown-openbsd
           - target: x86_64-unknown-haiku
           - target: armv7-unknown-linux-uclibceabihf
-          - target: i686-unknown-hurd-gnu
+          # Disable it due to: https://github.com/nix-rust/nix/issues/2549
+          # - target: i686-unknown-hurd-gnu
     steps:
       - name: checkout
         uses: actions/checkout@v4
