--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -303,8 +303,7 @@ jobs:
           - target: x86_64-unknown-openbsd
           - target: x86_64-unknown-haiku
           - target: armv7-unknown-linux-uclibceabihf
-          # Disable it due to: https://github.com/nix-rust/nix/issues/2549
-          # - target: i686-unknown-hurd-gnu
+          - target: i686-unknown-hurd-gnu
     steps:
       - name: checkout
         uses: actions/checkout@v4
